avro_derive/tests/ui/avro_rs_373_tag_content_enum.rs
use apache_avro::AvroSchema;

#[derive(AvroSchema)]
#[serde(tag = "bar", content = "spam")]
enum Foo {
    One,
    Two,
}

pub fn main() {}
